# stm32-protobuf-usb

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
proto/: command.proto  response.proto
src/: command_dispatcher.rs  command_handler.rs  commands.rs  comms.rs  context.rs  dispatcher.rs  main.rs  usb_task.rs
src/commands/: power_control.rs  print_message.rs  set_led.rs
