[package]
name = "usb-comms"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
embassy-stm32 = { version = "0.2.0", features = ["defmt", "stm32f411ce", "unstable-pac", "memory-x", "time-driver-tim4", "exti", "chrono"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "task-arena-size-8192"] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
femtopb = { version = "0.8.0", features = ["defmt"] }
heapless = "0.8.0"
static_cell = "2.1.0"

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[build-dependencies]
femtopb-build = "0.8.0"

[profile.release]
debug = 2
